--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="container">
         <h1>Welcome to Our Home Baking Business</h1>
         <p>Delicious homemade treats made with love!</p>
-        <a href="products.html" class="button">View Our Products</a>
+        <a href="product.html" class="button">View Our Products</a>
     </div>
 </body>
 </html>
